// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sus-router smoke renders at a path 1`] = `
<div
  role="group"
  tabindex="-1"
>
  <div
    data-testid="dashboard-page"
  >
    Dash
    <br />
    <br />
    <a
      aria-current="page"
      href="/dash"
    >
      Current page
    </a>
    <a
      data-testid="home-anchor"
      href="/"
    >
      Home
    </a>
  </div>
</div>
`;

exports[`sus-router smoke renders the root component at "/" 1`] = `
<div
  role="group"
  tabindex="-1"
>
  <div
    data-testid="home-page"
  >
    Home
    <br />
    <a
      aria-current="page"
      href="/"
    >
      Current page
    </a>
    <a
      data-testid="dash-anchor"
      href="/dash"
    >
      dash
    </a>
  </div>
</div>
`;
